# theflame

./: .gitignore  LICENSE  cmake_command.sh
src/: CMakeLists.txt  README.md  logging.h
src/apriltageval/: CMakeLists.txt
src/apriltageval/src/: apriltag_all.h  tag_detector.cpp  tag_detector.h  tag_projector.cpp  tag_projector.h
src/imageproc/: CMakeLists.txt
src/imageproc/src/: imageabsdiff.cpp  imageproc.cpp  imageproc.h  imagetransform.cpp
src/videoproc/: CMakeLists.txt
src/videoproc/src/: itov.cpp  videoproc.cpp  videoproc.h  vtoi.cpp
